# maxes

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: 1.ipynb  10.ipynb  11.ipynb  12.ipynb  13.ipynb  14.ipynb  16_xml.ipynb  17_xes.ipynb  18_etree.ipynb  19.ipynb  2.ipynb  20.ipynb  21.ipynb  23.ipynb  24.ipynb  25.ipynb  26_xes_overview.ipynb  27_xes_overview.ipynb  28_xes_analysis.ipynb  29.ipynb  3.ipynb  30.ipynb  31.ipynb  32.ipynb  34_pre_process.ipynb  35.ipynb  36.ipynb  37.ipynb  38.ipynb  39.ipynb  4.ipynb  40-pagerank.ipynb  40.ipynb  41.ipynb  42.ipynb  43.ipynb  44.ipynb  45.ipynb  46-1.py  46-2.py  (+25 more)
src/maxes/: analyze_sequence.py  analyze_xes.py  constants.py  draw_xes_sequence_graph.py  graphs.py  log_builder.py  logging.py  types.py  utils.py  xes_file.py  xes_loader.py  xes_loader2.py  xes_log.py
src/maxes/app/: application_context.py  background_tasks.py  main.py  tabs_demo.py
src/maxes/data/: load_files.py  load_files.py.j2  manifest.jsonc  manifest.py  manifest_reader.py
src/maxes/experiments/: score.py
src/maxes/generators/: graph_generator1.py  graph_generator2.py  graph_generator3.py
src/maxes/metrics/: general.py  mean_difference.py  mean_error.py  mean_levenstein_distance.py
src/maxes/models/: fake_predictor.py  models.py  simple_categorical_feature_picker.py
src/maxes/notebooks/: load_file.py.j2  load_files.example.json  utils.py
src/maxes/serialization/: serialize.py
test/: test_xes.py
test/src/maxes/: test_analyze_sequence.py  test_analyze_xes.py  test_xes_loader2.py
test/src/xes/: test_load_xes.py  (+1 more)
(+18 files in other folders)
